crates/kirin-derive-core-old/src/kirin/builder/snapshots/kirin_derive_core__kirin__builder__tests__cf.snap
---
source: crates/kirin-derive-core/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---
impl<T: TypeLattice> ControlFlow<T> {
    pub fn op_branch<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        target: impl Into<Successor>,
    ) -> control_flow_build_result::Branch
    where
        Lang: ::kirin::ir::Dialect + From<ControlFlow<T>>,
        Lang::TypeLattice: From<T>,
    {
        let branch_statement_id = context.statement_arena().next_id();
        let target: Successor = target.into();
        context
            .statement()
            .definition(Self::Branch { target })
            .new();
        control_flow_build_result::Branch {
            id: branch_statement_id,
        }
    }
    pub fn op_conditional_branch<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        condition: impl Into<SSAValue>,
        true_target: impl Into<Successor>,
        false_target: impl Into<Successor>,
    ) -> control_flow_build_result::ConditionalBranch
    where
        Lang: ::kirin::ir::Dialect + From<ControlFlow<T>>,
        Lang::TypeLattice: From<T>,
    {
        let conditionalbranch_statement_id = context.statement_arena().next_id();
        let condition: SSAValue = condition.into();
        let true_target: Successor = true_target.into();
        let false_target: Successor = false_target.into();
        let marker: std::marker::PhantomData<T> = std::marker::PhantomData;
        context
            .statement()
            .definition(Self::ConditionalBranch {
                condition,
                true_target,
                false_target,
                marker,
            })
            .new();
        control_flow_build_result::ConditionalBranch {
            id: conditionalbranch_statement_id,
        }
    }
    pub fn op_return<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        field_0: impl Into<SSAValue>,
    ) -> control_flow_build_result::Return
    where
        Lang: ::kirin::ir::Dialect + From<ControlFlow<T>>,
        Lang::TypeLattice: From<T>,
    {
        let return_statement_id = context.statement_arena().next_id();
        let field_0: SSAValue = field_0.into();
        context.statement().definition(Self::Return(field_0)).new();
        control_flow_build_result::Return {
            id: return_statement_id,
        }
    }
}
#[automatically_derived]
pub mod control_flow_build_result {
    use kirin::ir::{ResultValue, Statement};
    #[automatically_derived]
    pub struct Branch {
        pub id: Statement,
    }
    #[automatically_derived]
    impl From<Branch> for Statement {
        fn from(value: Branch) -> Self {
            value.id
        }
    }
    #[automatically_derived]
    pub struct ConditionalBranch {
        pub id: Statement,
    }
    #[automatically_derived]
    impl From<ConditionalBranch> for Statement {
        fn from(value: ConditionalBranch) -> Self {
            value.id
        }
    }
    #[automatically_derived]
    pub struct Return {
        pub id: Statement,
    }
    #[automatically_derived]
    impl From<Return> for Statement {
        fn from(value: Return) -> Self {
            value.id
        }
    }
}
