crates/kirin-derive-core-old/src/kirin/builder/snapshots/kirin_derive_core__kirin__builder__tests__scf.snap
---
source: crates/kirin-derive-core/src/kirin/builder/mod.rs
expression: "Builder::default().print(&input)"
---

